--- a/Estilo.css
+++ b/Estilo.css
@@ -6,7 +6,7 @@ body {
   color: #6CCFF6;
 }
 
-/* Encabezado */
+/* Header */
 header {
   background-color: #001011;
   color: #FFFFFC;
@@ -36,7 +36,7 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
-/* Secciones */
+/* Section */
 section {
   padding: 40px;
   max-width: 800px;
@@ -55,7 +55,7 @@ p {
   line-height: 1.6;
 }
 
-/* Formulario */
+/* Formu */
 form {
   display: flex;
   flex-direction: column;
