--- a/Estilo.css
+++ b/Estilo.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Orbitron', sans-serif;
   margin: 0;
@@ -22,6 +26,14 @@ header {
     align-items: center;
     gap: 15px;
     flex-wrap: wrap;
+}
+
+.header-doble-logo{
+  animation: aparecer 1s ease-out forwards;
+}
+@keyframes aparecer {
+  0% { opacity: 0; transform: translateY(-10px); }
+  100% { opacity: 1; transform: translateY(0); }
 }
 
 .logo {
@@ -92,6 +104,8 @@ button {
 
 button:hover {
   background-color: #6CCFF6;
+  transform: scale(1.05);
+  transition: all 0.3s ease;
 }
 
 /* Footer */
